<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F0F3F6"
              android:orientation="vertical"
    >


    <LinearLayout style="@style/wrap_layout">
        <!-- 上圆角-->
        <LinearLayout
            android:id="@+id/menu_cart"
            style="@style/top_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/my_cart"/>

            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <!-- 分割线 -->
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout
            android:id="@+id/menu_bought"
            style="@style/mid_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/my_bought"/>

            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <View style="@style/bg_line"/>
        <!-- 下圆角-->
        <LinearLayout
            android:id="@+id/menu_user"
            style="@style/bottom_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/user_center"/>

            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

    </LinearLayout>


    <!-- 全圆角-->
    <LinearLayout style="@style/wrap_layout">

        <LinearLayout
            android:id="@+id/menu_about"
            style="@style/single_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/about"/>

            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

    </LinearLayout>

    <!-- 全圆角-->
    <LinearLayout style="@style/wrap_layout">

        <LinearLayout
            android:id="@+id/menu_setting"
            style="@style/single_layout"
            >

            <TextView
                style="@style/usertext"
                android:text="@string/setting"/>

            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
