<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F0F3F6"
              android:orientation="vertical"
    >


    <LinearLayout style="@style/wrap_layout">
        <!-- 上圆角-->
        <LinearLayout
            android:id="@+id/menu_personal_data"
            style="@style/top_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/update"/>

            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <!-- 分割线 -->
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout
            android:id="@+id/menu_pic_setting"
            style="@style/bottom_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/software_setting"/>

            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

    </LinearLayout>


    <!-- 全圆角-->
    <LinearLayout style="@style/wrap_layout">

        <LinearLayout
            android:id="@+id/menu_exit"
            style="@style/single_layout_for_exit"
            android:textAlignment="center"
            >

            <TextView
                style="@style/usertext"
                android:text="@string/exit"
                android:textAlignment="center"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
