<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--头部toolbar-->
    <RelativeLayout
        android:id="@+id/cart_title_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/certainblue">

        <ImageView
            android:id="@+id/cart_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cart_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/cart_edit"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <!--商品listView-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <ListView
        android:id="@+id/list_shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1"
        android:scrollbars="none" />

    <!--底端操作栏-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <CheckBox
            android:id="@+id/ck_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:button="@drawable/check_box_style"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:text="@string/all_check"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_show_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/total"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_settlement"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/blue_button"
            android:gravity="center"
            android:text="@string/buy"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
