<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/personal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titlebarColor">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:text="编辑"
            android:textColor="#ffffff"
            android:textStyle="bold"
            />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_toolbar"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@id/cat_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/cutecat"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cat_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Title"
            android:textColor="@color/main_textColor"
            android:textSize="18sp"/>

    </RelativeLayout>

    <!-- 用户登录后数据展示Layout -->
    <RelativeLayout
        android:id="@+id/user_info_show_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_show_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="点击菜单栏'编辑'按钮即可编辑个人资料"
            android:textAlignment="center"
            android:textColor="@color/main_textTitleColor"
            android:textSize="16sp"
            android:visibility="visible"
            />
    </RelativeLayout>

    <!-- 编辑数据Layout -->
    <RelativeLayout
        android:id="@+id/user_Info_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_account"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tv_username"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tv_password"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
